package com.systemdesign.lld.googledocs.domain.model;

public enum Role {
    OWNER,
    EDITOR,
    VIEWER
}
